--- a/public/bower.json
+++ b/public/bower.json
@@ -30,6 +30,7 @@
     "angular-ui-sortable": "~0.13.3",
     "angular-ui-bootstrap": "~0.12.0",
     "jquery-ui": "~1.11.2",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "ngDialog": "~0.3.9"
   }
 }
