--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "repository" : {
-    "type" : "git",
-    "url"  : "https://github.com/hazemhagrass/trello-for-redmine"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hazemhagrass/trello-for-redmine"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
@@ -16,6 +16,7 @@
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
+    "on-finished": "^2.2.0",
     "serve-favicon": "~2.2.0"
   }
 }
