--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
+    "crc": "^3.2.1",
     "debug": "~2.1.1",
+    "depd": "^1.0.0",
+    "destroy": "^1.0.3",
     "express": "~4.11.1",
+    "forwarded": "^0.1.0",
+    "ipaddr.js": "^0.1.8",
     "jade": "~1.9.1",
+    "mime": "^1.3.4",
     "morgan": "~1.5.1",
+    "ms": "^0.7.0",
     "on-finished": "^2.2.0",
     "serve-favicon": "~2.2.0"
   }
