--- a/public/bower.json
+++ b/public/bower.json
@@ -31,6 +31,8 @@
     "angular-ui-bootstrap": "~0.12.0",
     "jquery-ui": "~1.11.2",
     "bootstrap": "~3.3.2",
-    "ngDialog": "~0.3.9"
+    "ngDialog": "~0.3.9",
+    "fontawesome": "~4.3.0",
+    "angular-xeditable": "~0.1.8"
   }
 }
