--- a/public/bower.json
+++ b/public/bower.json
@@ -33,6 +33,12 @@
     "bootstrap": "~3.3.2",
     "ngDialog": "~0.3.9",
     "fontawesome": "~4.3.0",
-    "angular-xeditable": "~0.1.8"
+    "angular-xeditable": "~0.1.8",
+    "angularjs-toaster": "~0.4.10",
+    "angular-rt-popup": "~1.0.2",
+    "angular-strap": "~2.1.6"
+  },
+  "resolutions": {
+    "angular": "1.3.13"
   }
 }
