--- a/public/bower.json
+++ b/public/bower.json
@@ -36,7 +36,8 @@
     "angular-xeditable": "~0.1.8",
     "angularjs-toaster": "~0.4.10",
     "angular-rt-popup": "~1.0.2",
-    "angular-strap": "~2.1.6"
+    "angular-strap": "~2.1.6",
+    "angular-bootstrap": "~0.12.0"
   },
   "resolutions": {
     "angular": "1.3.13"
