--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "forever ./bin/www"
   },
   "repository": {
     "type": "git",
