--- a/public/bower.json
+++ b/public/bower.json
@@ -38,7 +38,8 @@
     "angular-rt-popup": "~1.0.2",
     "angular-strap": "~2.1.6",
     "angular-bootstrap": "~0.12.0",
-    "angular-gravatar": "~0.2.4"
+    "angular-gravatar": "~0.2.4",
+    "angular-xeditable": "0.1.x"
   },
   "resolutions": {
     "angular": "1.3.13"
