--- a/public/bower.json
+++ b/public/bower.json
@@ -39,7 +39,9 @@
     "angular-strap": "~2.1.6",
     "angular-bootstrap": "~0.12.0",
     "angular-gravatar": "~0.2.4",
-    "angular-xeditable": "0.1.x"
+    "angular-xeditable": "0.1.x",
+    "angular-sanitize" : "1.3.14"
+
   },
   "resolutions": {
     "angular": "1.3.13"
