--- a/public/bower.json
+++ b/public/bower.json
@@ -40,7 +40,8 @@
     "angular-bootstrap": "~0.12.0",
     "angular-gravatar": "~0.2.4",
     "angular-xeditable": "0.1.x",
-    "angular-sanitize" : "1.3.14"
+    "angular-sanitize" : "1.3.14",
+    "ngstorage" : "0.3.0"
 
   },
   "resolutions": {
