[fix] store api key in frontend and [add] store api key in session"

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serve-favicon": "^2.2.0",
     "underscore-node": "^0.1.2",
     "forever": "~0.14.1",
-    "redis": "~0.12.1"
+    "redis": "~0.12.1",
+    "cookie-session": "~1.1.0"
   }
 }
