[add] upload files

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "underscore-node": "^0.1.2",
     "forever": "~0.14.1",
     "redis": "~0.12.1",
-    "cookie-session": "~1.1.0"
+    "cookie-session": "~1.1.0",
+    "connect-multiparty": "~1.2.5"
   }
 }
