--- a/public/bower.json
+++ b/public/bower.json
@@ -33,16 +33,16 @@
     "bootstrap": "~3.3.2",
     "ngDialog": "~0.3.9",
     "fontawesome": "~4.3.0",
-    "angular-xeditable": "~0.1.8",
+    "angular-xeditable": "0.1.x",
     "angularjs-toaster": "~0.4.10",
     "angular-rt-popup": "~1.0.2",
     "angular-strap": "~2.1.6",
     "angular-bootstrap": "~0.12.0",
     "angular-gravatar": "~0.2.4",
-    "angular-xeditable": "0.1.x",
-    "angular-sanitize" : "1.3.14",
-    "ngstorage" : "0.3.0"
-
+    "angular-sanitize": "1.3.14",
+    "ngstorage": "0.3.0",
+    "ng-file-upload": "~3.1.2",
+    "ng-file-upload-shim": "~3.1.2"
   },
   "resolutions": {
     "angular": "1.3.13"
