--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "forever": "~0.14.1",
     "redis": "~0.12.1",
     "cookie-session": "~1.1.0",
-    "connect-multiparty": "~1.2.5"
+    "connect-multiparty": "~1.2.5",
+    "request": "~2.53.0"
   }
 }
